# cloud-provider-azure

./: Dockerfile  cloud-node-manager.Dockerfile  e2e.Dockerfile  go.mod  go.sum
.github/workflows/: cflite_cron.yaml  cleanupcache.yaml  codeql-analysis.yml  codeql-azclient.yml  codespell.yaml  dependency-review.yml  go-mod-consistency.yaml  hugo.yml  kubetest2-release.yml  lint-azclient.yaml  lint-ci-weekly.yaml  lint.yaml  release-azclient-trace.yml  release-azclient.yml  release-cache.yml  release-configloader.yml  release.yaml  scorecards.yml  trivy.yaml  update-trivy-db.yaml  update-vendor-license.yml
cmd/cloud-controller-manager/app/: BUILD.bazel  controllermanager.go
cmd/cloud-controller-manager/app/config/: BUILD.bazel
cmd/cloud-controller-manager/app/options/: BUILD.bazel  options.go
cmd/cloud-node-manager/app/options/: options.go
docs/: multi-slb-ip-sharing-findings.md  multi-slb-ip-sharing-fix-plan.md
health-probe-proxy/: go.mod  go.sum
helm/cloud-provider-azure/: values.yaml
kubetest2-aks/: go.mod  go.sum
pkg/auth/: BUILD.bazel
pkg/azclient/: go.mod  go.sum
pkg/azclient/cache/: go.mod  go.sum
pkg/azclient/client-gen/: go.mod  go.sum
pkg/azclient/configloader/: go.mod  go.sum
pkg/azclient/trace/: go.mod  go.sum
pkg/azureclients/armclient/: BUILD.bazel
pkg/azureclients/interfaceclient/: BUILD.bazel  azure_interfaceclient.go  azure_interfaceclient_test.go  interface.go
pkg/azureclients/interfaceclient/mockinterfaceclient/: interface.go
pkg/azureclients/loadbalancerclient/: azure_loadbalancerclient.go  azure_loadbalancerclient_test.go  interface.go
pkg/azureclients/loadbalancerclient/mockloadbalancerclient/: interface.go
pkg/azureclients/privatednszonegroupclient/: azure_privatednszonegroupclient.go  azure_privatednszonegroupclient_test.go  interface.go
pkg/azureclients/privatednszonegroupclient/mockprivatednszonegroupclient/: interface.go
pkg/azureclients/privateendpointclient/: azure_privateendpointclient.go  azure_privateendpointclient_test.go  interface.go
pkg/azureclients/privateendpointclient/mockprivateendpointclient/: interface.go
pkg/azureclients/privatelinkserviceclient/: azure_privatelinkserviceclient.go  azure_privatelinkserviceclient_test.go  interface.go
pkg/azureclients/privatelinkserviceclient/mockprivatelinkserviceclient/: interface.go
pkg/azureclients/publicipclient/: azure_publicipclient.go  azure_publicipclient_test.go  interface.go
pkg/azureclients/publicipclient/mockpublicipclient/: interface.go
pkg/azureclients/routeclient/: azure_routeclient.go  azure_routeclient_test.go  interface.go
pkg/azureclients/routeclient/mockrouteclient/: interface.go
pkg/azureclients/routetableclient/: azure_routetableclient.go  azure_routetableclient_test.go  interface.go
pkg/azureclients/routetableclient/mockroutetableclient/: interface.go
pkg/azureclients/securitygroupclient/: azure_securitygroupclient.go  azure_securitygroupclient_test.go  interface.go
pkg/azureclients/securitygroupclient/mocksecuritygroupclient/: interface.go
pkg/azureclients/subnetclient/: azure_subnetclient.go  azure_subnetclient_test.go  interface.go
pkg/azureclients/subnetclient/mocksubnetclient/: interface.go
pkg/azureclients/vmasclient/: BUILD.bazel  azure_vmasclient.go  azure_vmasclient_test.go  interface.go
pkg/azureclients/vmasclient/mockvmasclient/: BUILD.bazel  interface.go
pkg/consts/: BUILD.bazel  consts.go
pkg/metrics/: BUILD.bazel
pkg/nodeipam/: BUILD.bazel
pkg/nodeipam/config/: BUILD.bazel
pkg/nodeipam/ipam/: BUILD.bazel
pkg/nodeipam/ipam/cidrset/: BUILD.bazel
pkg/nodeipam/ipam/test/: BUILD.bazel
pkg/provider/: BUILD.bazel  azure.go  azure_backoff.go  azure_backoff_test.go  azure_instances_test.go  azure_loadbalancer.go  azure_loadbalancer_backendpool.go  azure_loadbalancer_backendpool_test.go  azure_loadbalancer_test.go  azure_local_services.go  azure_local_services_test.go  azure_mock_loadbalancer_backendpool.go  azure_mock_vmsets.go  azure_privatelinkservice.go  azure_privatelinkservice_test.go  azure_routes.go  azure_routes_test.go  azure_standard.go  azure_standard_test.go  azure_storageaccount.go  azure_storageaccount_test.go  azure_test.go  azure_utils.go  azure_utils_test.go  azure_vmsets.go  azure_vmss.go  azure_vmss_test.go  azure_vmssflex.go  azure_vmssflex_test.go  azure_wrap.go
pkg/retry/: BUILD.bazel
pkg/util/controller/node/: BUILD.bazel
pkg/util/controller/testutil/: BUILD.bazel
pkg/util/node/: BUILD.bazel
pkg/version/verflag/: BUILD.bazel
site/: package-lock.json  package.json
site/content/en/topics/: ipam.md
tests/: go.mod  go.sum
tests/e2e/network/: BUILD.bazel  ensureloadbalancer.go  multiple_standard_lb.go  network_security_group.go  node.go  private_link_service.go  service_annotations.go  standard_lb.go
tests/e2e/utils/: azure_test_client.go  network_interface_utils.go  network_utils.go  route_table_utils.go  service_utils.go
